# template-full

./: .gitignore  README.md  coders.yaml  compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d623da1359c_init.py
backend/app/: deps.py  exceptions.py  main.py  worker.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/auth/providers/: base.py  github.py  google.py
backend/app/core/: arq.py  config.py  database.py  logging.py  redis.py  security.py
backend/app/users/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_deps.py  test_user_service.py
frontend/: .env.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...backendProxy]/: route.ts
frontend/app/api/auth/[provider]/callback/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/me/: route.ts
frontend/app/api/auth/refresh/: route.ts
frontend/app/api/auth/refresh-redirect/: route.ts
frontend/app/login/: page.tsx
frontend/components/: user-menu.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: auth.ts  env.ts
